[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GameOverUi.gd" type="Script" id=1]
[ext_resource path="res://Text/FontBig.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/ScreenText.gd" type="Script" id=3]

[node name="Background" type="Node2D"]
z_index = 7
z_as_relative = false
script = ExtResource( 1 )

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 26.0
margin_top = 21.0
margin_right = 1894.0
margin_bottom = 335.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.964706, 0.839216, 0.741176, 1 )
bbcode_enabled = true
scroll_active = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextWaitTimer" type="Timer" parent="Text"]

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="timeout" from="Text/TextWaitTimer" to="Text" method="_on_TextWaitTimer_timeout"]
[connection signal="timeout" from="TextTimer" to="Text" method="_on_Timer_timeout"]
